Exemplos/expr/infixas/expr.output
Gramática

    0 $accept: Linha $end

    1 Linha: Expr TFIM

    2 Expr: Expr TADD Termo
    3     | Expr TSUB Termo
    4     | Termo

    5 Termo: Termo TMUL Fator
    6      | Termo TDIV Fator
    7      | Fator

    8 Fator: TNUM
    9      | TAPAR Expr TFPAR
   10      | TSUB Fator


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
TADD (258) 2
TMUL (259) 5
TSUB (260) 3 10
TDIV (261) 6
TAPAR (262) 9
TFPAR (263) 9
TNUM (264) 8
TFIM (265) 1


Não terminais com as regras onde eles aparecem

$accept (11)
    à esquerda: 0
Linha (12)
    à esquerda: 1, à direita: 0
Expr (13)
    à esquerda: 2 3 4, à direita: 1 2 3 9
Termo (14)
    à esquerda: 5 6 7, à direita: 2 3 4 5 6
Fator (15)
    à esquerda: 8 9 10, à direita: 5 6 7 10


Estado 0

    0 $accept: . Linha $end

    TSUB   deslocar, e ir ao estado 1
    TAPAR  deslocar, e ir ao estado 2
    TNUM   deslocar, e ir ao estado 3

    Linha  ir ao estado 4
    Expr   ir ao estado 5
    Termo  ir ao estado 6
    Fator  ir ao estado 7


Estado 1

   10 Fator: TSUB . Fator

    TSUB   deslocar, e ir ao estado 1
    TAPAR  deslocar, e ir ao estado 2
    TNUM   deslocar, e ir ao estado 3

    Fator  ir ao estado 8


Estado 2

    9 Fator: TAPAR . Expr TFPAR

    TSUB   deslocar, e ir ao estado 1
    TAPAR  deslocar, e ir ao estado 2
    TNUM   deslocar, e ir ao estado 3

    Expr   ir ao estado 9
    Termo  ir ao estado 6
    Fator  ir ao estado 7


Estado 3

    8 Fator: TNUM .

    $padrão  reduzir usando a regra 8 (Fator)


Estado 4

    0 $accept: Linha . $end

    $end  deslocar, e ir ao estado 10


Estado 5

    1 Linha: Expr . TFIM
    2 Expr: Expr . TADD Termo
    3     | Expr . TSUB Termo

    TADD  deslocar, e ir ao estado 11
    TSUB  deslocar, e ir ao estado 12
    TFIM  deslocar, e ir ao estado 13


Estado 6

    4 Expr: Termo .
    5 Termo: Termo . TMUL Fator
    6      | Termo . TDIV Fator

    TMUL  deslocar, e ir ao estado 14
    TDIV  deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 4 (Expr)


Estado 7

    7 Termo: Fator .

    $padrão  reduzir usando a regra 7 (Termo)


Estado 8

   10 Fator: TSUB Fator .

    $padrão  reduzir usando a regra 10 (Fator)


Estado 9

    2 Expr: Expr . TADD Termo
    3     | Expr . TSUB Termo
    9 Fator: TAPAR Expr . TFPAR

    TADD   deslocar, e ir ao estado 11
    TSUB   deslocar, e ir ao estado 12
    TFPAR  deslocar, e ir ao estado 16


Estado 10

    0 $accept: Linha $end .

    $padrão  aceitar


Estado 11

    2 Expr: Expr TADD . Termo

    TSUB   deslocar, e ir ao estado 1
    TAPAR  deslocar, e ir ao estado 2
    TNUM   deslocar, e ir ao estado 3

    Termo  ir ao estado 17
    Fator  ir ao estado 7


Estado 12

    3 Expr: Expr TSUB . Termo

    TSUB   deslocar, e ir ao estado 1
    TAPAR  deslocar, e ir ao estado 2
    TNUM   deslocar, e ir ao estado 3

    Termo  ir ao estado 18
    Fator  ir ao estado 7


Estado 13

    1 Linha: Expr TFIM .

    $padrão  reduzir usando a regra 1 (Linha)


Estado 14

    5 Termo: Termo TMUL . Fator

    TSUB   deslocar, e ir ao estado 1
    TAPAR  deslocar, e ir ao estado 2
    TNUM   deslocar, e ir ao estado 3

    Fator  ir ao estado 19


Estado 15

    6 Termo: Termo TDIV . Fator

    TSUB   deslocar, e ir ao estado 1
    TAPAR  deslocar, e ir ao estado 2
    TNUM   deslocar, e ir ao estado 3

    Fator  ir ao estado 20


Estado 16

    9 Fator: TAPAR Expr TFPAR .

    $padrão  reduzir usando a regra 9 (Fator)


Estado 17

    2 Expr: Expr TADD Termo .
    5 Termo: Termo . TMUL Fator
    6      | Termo . TDIV Fator

    TMUL  deslocar, e ir ao estado 14
    TDIV  deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 2 (Expr)


Estado 18

    3 Expr: Expr TSUB Termo .
    5 Termo: Termo . TMUL Fator
    6      | Termo . TDIV Fator

    TMUL  deslocar, e ir ao estado 14
    TDIV  deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 3 (Expr)


Estado 19

    5 Termo: Termo TMUL Fator .

    $padrão  reduzir usando a regra 5 (Termo)


Estado 20

    6 Termo: Termo TDIV Fator .

    $padrão  reduzir usando a regra 6 (Termo)
